--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,13 @@
         android:theme="@style/Theme.Survey"
         tools:targetApi="31">
         <activity
+            android:name=".ui.SharePollActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.CreatePollOptionsActivity"
             android:exported="false">
             <meta-data
